[tool.poetry]
name = "workshops"
version = "0.1.0"
description = ""
authors = ["Anton <antonoutkine@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
ruamel_yaml = "^0.15.74"
"ruamel.yaml" = "^0.15.74"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
